# Polterheist

./: .gitignore  Cargo.toml  IDEAS.md  README.md  justfile
src/: gameover.rs  main.rs  menu.rs  splash.rs
src/game/: enemy.rs  health.rs  mod.rs  player.rs  pointer.rs  projectile.rs  score.rs  spark.rs
